Thu Jan 09 06:00:03 GMT 2014  Olly Betts <olly@survex.com>

	* backends/dbcheck.cc: Skip absent lazily created tables in the case
	  where out == NULL too.

Thu Jan 09 05:31:40 GMT 2014  Olly Betts <olly@survex.com>

	* tests/api_wrdb.cc: Use Xapian::Database::check() in cursordelbug1.
	  (partly addresses #238)

Thu Jan 09 05:30:45 GMT 2014  Olly Betts <olly@survex.com>

	* include/xapian/database.h: Make second and third parameters to
	  Xapian::Database::check() optional, defaulting to a quiet check.

Thu Jan 09 02:52:54 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/,backends/chert/,backends/dbcheck.cc,
	  bin/xapian-check.cc,include/xapian/database.h: Alter
	  Database::check() to take its "out" parameter as a pointer to
	  std::ostream instead of a reference, and make passing NULL means "do
	  not produce output".  Remove the form without the "out" parameter,
	  which used to mean "send output to stdout" - if you want this, just
	  pass "&std::cout" in.

Thu Jan 09 01:50:14 GMT 2014  Olly Betts <olly@survex.com>

	* include/xapian/database.h: OS X SDK check() macro takes one
	  argument, so there's no need to protect check() methods with
	  more than one argument.
	* include/xapian/valueiterator.h: Protect the one check() method in
	  our API which does take one argument.

Wed Jan 08 11:48:58 GMT 2014  Olly Betts <olly@survex.com>

	* api/smallvector.cc,api/smallvector.h: Include cstddef rather than
	  cstring for std::size_t, as it's a simpler header.  Don't assume
	  size_t will be available unqualified.  Add SmallVector::size_type
	  typedef.

Mon Jan 06 11:54:53 GMT 2014  Olly Betts <olly@survex.com>

	* net/progclient.cc: Fix xlC warning.

Mon Jan 06 00:31:19 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_table.cc,backends/chert/chert_table.cc:
	  Validate dir_end when reading a block.  (fixes #592)

Wed Jan 01 01:20:46 GMT 2014  Olly Betts <olly@survex.com>

	* docs/Makefile.am: Fix handling of MAINTAINER_NO_DOCS.
