@@ -46,6 +46,7 @@
 #include "stringutils.h"
 
 #include <cstdio> // For rename().
+#include <cstdlib>
 
 using namespace std;
 using namespace Xapian;
