@@ -2,7 +2,7 @@
  *
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2001,2002 Ananova Ltd
- * Copyright 2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2013 Olly Betts
+ * Copyright 2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2013,2014 Olly Betts
  * Copyright 2003 Orange PCS Ltd
  * Copyright 2003 Sam Liddicott
  * Copyright 2007,2008,2009 Lemur Consulting Ltd
@@ -67,10 +67,14 @@
 #include <signal.h>
 #include <time.h>
 
+extern "C" {
+
 static void
 set_timeout_flag(union sigval sv)
 {
     *(reinterpret_cast<volatile bool*>(sv.sival_ptr)) = true;
+}
+
 }
 
 class TimeOut {
