@@ -1,7 +1,7 @@
 /** @file tradweight.cc
  * @brief Xapian::TradWeight class - the "traditional" probabilistic formula
  */
-/* Copyright (C) 2009,2010,2011,2012 Olly Betts
+/* Copyright (C) 2009,2010,2011,2012,2014 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -28,6 +28,7 @@
 
 #include "xapian/error.h"
 
+#include <algorithm>
 #include <cmath>
 
 using namespace std;
